[gd_scene load_steps=18 format=3 uid="uid://bj0csrpwvuve7"]

[ext_resource type="Script" path="res://entities/player/player.gd" id="1_iptsk"]
[ext_resource type="Script" path="res://components/StatsComponent.gd" id="2_ebdg5"]
[ext_resource type="Script" path="res://components/HurtComponent.gd" id="3_8x5l0"]
[ext_resource type="Texture2D" uid="uid://b86c7gvebuu4q" path="res://entities/player/art/player_ship.png" id="4_pul1g"]
[ext_resource type="PackedScene" uid="uid://cyckrkweqnvss" path="res://entities/player/laser/laser.tscn" id="4_sfldr"]
[ext_resource type="Script" path="res://components/HurtboxComponent.gd" id="6_ubm2j"]
[ext_resource type="Script" path="res://components/SpawnerComponent.gd" id="7_lma0n"]
[ext_resource type="PackedScene" uid="uid://cf1ag78h5qbjy" path="res://assets/effects/explosion/explosion.tscn" id="8_b8sgi"]
[ext_resource type="Script" path="res://components/DestroyedComponent.gd" id="8_w3w5f"]
[ext_resource type="Script" path="res://components/ScaleComponent.gd" id="10_yqnq6"]
[ext_resource type="Script" path="res://components/FlashComponent.gd" id="11_kvsiy"]
[ext_resource type="Script" path="res://components/variable_pitch_audio_stream_player.gd" id="12_du3i5"]
[ext_resource type="Script" path="res://components/ShakeComponent.gd" id="12_jnxj8"]
[ext_resource type="AudioStream" uid="uid://dtcgj622k4g" path="res://entities/player/laser/sounds/shoot/shoot.wav" id="14_vk653"]
[ext_resource type="AudioStream" uid="uid://dp0el66lt1per" path="res://entities/player/sounds/hurt/hurt.wav" id="16_hfu5v"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vvy3s"]
radius = 5.0
height = 12.0

[sub_resource type="CircleShape2D" id="CircleShape2D_66gws"]
radius = 12.0

[node name="Player" type="CharacterBody2D"]
z_index = 1
script = ExtResource("1_iptsk")

[node name="StatsComponent" type="Node" parent="."]
script = ExtResource("2_ebdg5")
health = 4

[node name="HurtComponent" type="Node" parent="." node_paths=PackedStringArray("stats_component", "hurt_box_component")]
script = ExtResource("3_8x5l0")
stats_component = NodePath("../StatsComponent")
hurt_box_component = NodePath("../HurtboxComponent")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 2)
texture = ExtResource("4_pul1g")

[node name="SpawnerComponent" type="Node" parent="."]
script = ExtResource("7_lma0n")
scene = ExtResource("4_sfldr")

[node name="Cannon1" type="Marker2D" parent="."]
position = Vector2(-4, -3)
metadata/_edit_group_ = true

[node name="Cannon2" type="Marker2D" parent="."]
position = Vector2(4, -3)
metadata/_edit_group_ = true

[node name="DeathEffectSpawner" type="Node" parent="."]
script = ExtResource("7_lma0n")
scene = ExtResource("8_b8sgi")

[node name="DestroyedComponent" type="Node" parent="." node_paths=PackedStringArray("actor", "stats_component", "destroyed_effect_spawner_component")]
script = ExtResource("8_w3w5f")
actor = NodePath("..")
stats_component = NodePath("../StatsComponent")
destroyed_effect_spawner_component = NodePath("../DeathEffectSpawner")

[node name="ScaleComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("10_yqnq6")
sprite = NodePath("../Sprite2D")

[node name="FlashComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("11_kvsiy")
sprite = NodePath("../Sprite2D")

[node name="ShakeComponent" type="Node" parent="." node_paths=PackedStringArray("node")]
script = ExtResource("12_jnxj8")
node = NodePath("../Sprite2D")

[node name="HurtboxComponent" type="Area2D" parent="."]
collision_mask = 2
script = ExtResource("6_ubm2j")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
visibility_layer = 2
shape = SubResource("CapsuleShape2D_vvy3s")

[node name="CollectionArea" type="Area2D" parent="."]
position = Vector2(0, 1)
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectionArea"]
light_mask = 8
visibility_layer = 4
shape = SubResource("CircleShape2D_66gws")

[node name="VariablePitchAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_vk653")
volume_db = -10.0
script = ExtResource("12_du3i5")

[node name="HurtAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_hfu5v")
script = ExtResource("12_du3i5")
